// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly with /app/ path 1`] = `
Array [
  <header>
    <div
      className="sc-bdVaJa bzVTIk"
    >
      <h1>
        Today
      </h1>
      <p>
        Wednesday, December 25 2019
      </p>
    </div>
  </header>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexFlow": "column nowrap",
        "margin": "0 auto 5rem",
        "maxWidth": "100%",
        "padding": 0,
      }
    }
  >
    <main>
      <h1>
        Some Content
      </h1>
    </main>
  </div>,
  <div
    className="sc-bwzfXH hCiwAb"
  >
    <div
      className="sc-htpNat hMjIwR footer"
    >
      <a
        href="/app/"
      >
        <div
          className="sc-bxivhb bEdBIT today"
        >
          <div
            className="sc-ifAKCX biWapd"
          />
          <svg
            className="todayIcon"
            fill="none"
            height={40}
            size={40}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 11 12 14 22 4"
            />
            <path
              d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
            />
          </svg>
        </div>
      </a>
      <a
        href="/app/journal"
      >
        <div
          className="sc-bxivhb dQxvwo yourJournal"
        >
          <svg
            className="journalIcon"
            fill="currentColor"
            height={32}
            size={32}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 576 512"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49 69.18-34.82 169.23-44.32 218.7-46.92 16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05 15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66 49.49 2.6 149.59 12.11 218.77 46.95 10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z"
            />
          </svg>
        </div>
      </a>
      <a
        href="/app/settings"
      >
        <div
          className="sc-bxivhb dQxvwo settings"
        >
          <svg
            fill="none"
            height={32}
            size={32}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
            />
          </svg>
        </div>
      </a>
    </div>
  </div>,
]
`;

exports[`Header renders correctly with /app/journal 1`] = `
Array [
  <header>
    <div
      className="sc-bdVaJa bzVTIk"
    >
      <h1>
        Your Journal
      </h1>
      <p>
        Wednesday, December 25 2019
      </p>
    </div>
  </header>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexFlow": "column nowrap",
        "margin": "0 auto 5rem",
        "maxWidth": "100%",
        "padding": 0,
      }
    }
  >
    <main>
      <h1>
        Some Content
      </h1>
    </main>
  </div>,
  <div
    className="sc-bwzfXH hCiwAb"
  >
    <div
      className="sc-htpNat hMjIwR footer"
    >
      <a
        href="/app/"
      >
        <div
          className="sc-bxivhb dQxvwo today"
        >
          <svg
            className="todayIcon"
            fill="none"
            height={32}
            size={32}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 11 12 14 22 4"
            />
            <path
              d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
            />
          </svg>
        </div>
      </a>
      <a
        href="/app/journal"
      >
        <div
          className="sc-bxivhb bEdBIT yourJournal"
        >
          <div
            className="sc-ifAKCX biWapd"
          />
          <svg
            className="journalIcon"
            fill="currentColor"
            height={40}
            size={40}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 576 512"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49 69.18-34.82 169.23-44.32 218.7-46.92 16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05 15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66 49.49 2.6 149.59 12.11 218.77 46.95 10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z"
            />
          </svg>
        </div>
      </a>
      <a
        href="/app/settings"
      >
        <div
          className="sc-bxivhb dQxvwo settings"
        >
          <svg
            fill="none"
            height={32}
            size={32}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
            />
          </svg>
        </div>
      </a>
    </div>
  </div>,
]
`;

exports[`Header renders correctly with /app/stats 1`] = `
Array [
  <header>
    <div
      className="sc-bdVaJa bzVTIk"
    >
      <h1>
        Your Journal
      </h1>
      <p>
        Wednesday, December 25 2019
      </p>
    </div>
  </header>,
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexFlow": "column nowrap",
        "margin": "0 auto 5rem",
        "maxWidth": "100%",
        "padding": 0,
      }
    }
  >
    <main>
      <h1>
        Some Content
      </h1>
    </main>
  </div>,
  <div
    className="sc-bwzfXH hCiwAb"
  >
    <div
      className="sc-htpNat hMjIwR footer"
    >
      <a
        href="/app/"
      >
        <div
          className="sc-bxivhb dQxvwo today"
        >
          <svg
            className="todayIcon"
            fill="none"
            height={32}
            size={32}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 11 12 14 22 4"
            />
            <path
              d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
            />
          </svg>
        </div>
      </a>
      <a
        href="/app/journal"
      >
        <div
          className="sc-bxivhb bEdBIT yourJournal"
        >
          <div
            className="sc-ifAKCX biWapd"
          />
          <svg
            className="journalIcon"
            fill="currentColor"
            height={40}
            size={40}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 576 512"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49 69.18-34.82 169.23-44.32 218.7-46.92 16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05 15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66 49.49 2.6 149.59 12.11 218.77 46.95 10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z"
            />
          </svg>
        </div>
      </a>
      <a
        href="/app/settings"
      >
        <div
          className="sc-bxivhb dQxvwo settings"
        >
          <svg
            fill="none"
            height={32}
            size={32}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
            />
          </svg>
        </div>
      </a>
    </div>
  </div>,
]
`;
